submit button is disabled until textareas are empty

--- a/client/src/components/NovTovarene/novTovarene.module.css
+++ b/client/src/components/NovTovarene/novTovarene.module.css
@@ -3,6 +3,11 @@
     margin-left: 150px;
 }
 
+.form-nov-tovarene{
+  margin-top: 50px;
+  margin-left: 150px;
+}
+
 .input-text{
     width: 70%;
     font-size: 20px;
