in to dead end with sidebar

--- a/client/src/components/Header/header.module.css
+++ b/client/src/components/Header/header.module.css
@@ -37,3 +37,12 @@
     fill:#fbfdff;
     padding-left: 40px;
 }
+
+/* .sidebar{
+    display: block;
+    background-color: gray;
+    z-index: 1;
+    color: black;
+    width: 800px;
+    height: 450px;
+} */
