NewGrouping created and form added to it

--- a/client/src/components/AllGroupingFolders/SearchGrouping/searchgrouping.module.css
+++ b/client/src/components/AllGroupingFolders/SearchGrouping/searchgrouping.module.css
@@ -2,3 +2,9 @@
     margin-top: 90px;
     margin-left: 70px;
 }
+
+.no-content{
+    font-size: 52px;
+    margin-left: 400px;
+    margin-top: 200px;
+}
